alignment works ish. need to add textwrap. Need to fix problem with p tag ending after emote

--- a/static/index.css
+++ b/static/index.css
@@ -27,6 +27,9 @@ body{
   height: auto;
   width: auto;
   align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .chat{
   padding: 0px;
